--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1256,7 +1256,7 @@ color: #FFFFFF !important;
           margin: 0 auto;
           margin-top: 94px;
           width: 90%;
-          height: 200px;
+          height: auto;
           padding-right: 0px;
           // position: relative;
        
