--- a/src/style/Carservice.scss
+++ b/src/style/Carservice.scss
@@ -24,7 +24,7 @@ color: #151C28;
 }
 
 .card-heading1 p{
-    font-family: Poppins;
+    font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
