--- a/src/style/Blog.scss
+++ b/src/style/Blog.scss
@@ -83,7 +83,7 @@ color: #151C28;
     margin: 10px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
     overflow: hidden;
     width: 300px;
   }
