--- a/src/style/secondhead.scss
+++ b/src/style/secondhead.scss
@@ -29,6 +29,13 @@
 }
 .offeringsecondhead-content-h1{
     font-size:16px;
+    font-family: 'Poppins';
+font-style: normal;
+font-weight: 500;
+// font-size: 18px;
+// line-height: 120%;
+color: #F4F8FF;
+
 }
 .head-social{
     width:70%;
@@ -76,10 +83,10 @@
     margin-top:20px !important;
 }
 .explore-heading{
-    font-family: 'Poppins';
+font-family: 'Poppins',sans-serif;
 font-style: normal;
 font-weight: 600;
-font-size: 24px;
+font-size: 20px;
 line-height: 120%;
 /* identical to box height, or 29px */
 
