--- a/src/style/tabs.scss
+++ b/src/style/tabs.scss
@@ -9,28 +9,34 @@
 box-shadow: 0px 3px 9px rgba(88, 85, 98, 0.16);
 color: black;
 }
-.Mui-selected{
-display: block !important;
+.css-1aquho2-MuiTabs-indicator{
+    background-color:#151C28 !important;
 }
-.css-aym9vq-MuiButtonBase-root-MuiTab-root{
-    display: inline !important;
+.css-h0q0iv-MuiButtonBase-root-MuiTab-root.Mui-selected{
+ color:#151C28 !important;
 }
-.css-aym9vq-MuiButtonBase-root-MuiTab-root img{
-    position: relative;
-    top: 8px;
-    left: -4px;
-    width: 20px;
-    height: auto;
-}
+// .Mui-selected{
+// display: block !important;
+// }
+// .css-aym9vq-MuiButtonBase-root-MuiTab-root{
+//     display: inline !important;
+// }
+// .css-aym9vq-MuiButtonBase-root-MuiTab-root img{
+//     position: relative;
+//     top: 8px;
+//     left: -4px;
+//     width: 20px;
+//     height: auto;
+// }
 
 .tabimg{
     width: 20px;
     height: auto;
-    position: relative;
-    top: 9px;
-    left: -4px;
+    // position: relative;
+    // top: 9px;
+    // left: -4px;
 }
-.css-aym9vq-MuiButtonBase-root-MuiTab-root{
-    min-height: 0 !important;
-    display: block !important;
-}
+// .css-aym9vq-MuiButtonBase-root-MuiTab-root{
+//     min-height: 0 !important;
+//     display: block !important;
+// }
