--- a/src/style/landing/header.scss
+++ b/src/style/landing/header.scss
@@ -235,7 +235,7 @@ border-radius: 34px;
       
       
           &:hover {
-            background: red;
+            background: #fab067;
           }
         // }
       }
