--- a/src/style/Terms.scss
+++ b/src/style/Terms.scss
@@ -27,3 +27,24 @@ line-height: 160%;
 
 color: #151C28;
 }
+
+.privacyandtermsmain{
+    width:800px;
+    margin:1.5rem auto;
+}
+
+@media screen and (max-width:600px) {
+    .privacyandtermsmain{
+        width:100%;
+        margin:1.5rem auto;
+        padding: 12px 20px;
+    }
+}
+
+@media  (min-width:768px) and (max-width:968) {
+    .privacyandtermsmain{
+        width:100%;
+        margin:1.5rem auto;
+        padding: 12px 30px;
+    }
+}
