--- a/src/style/Blog.scss
+++ b/src/style/Blog.scss
@@ -21,8 +21,11 @@ display: flex;
     position: absolute;
     right: 80px;
 }
+.block-card-link{
+  color: #FB7E15;
+}
 .blog-head{
-    font-family: Poppins;
+    font-family: 'Poppins';
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
