--- a/src/style/Login.scss
+++ b/src/style/Login.scss
@@ -52,9 +52,10 @@ padding: 0px !important;
   height: 50px;
 }
 .login-btn{
-  width: 49%;
+  width: 87%;
   margin: 0 auto;
-  margin-left: 32%;
+  /* margin-left: 32%; */
+  margin: 0 40px;
   margin-top: 20px;
 }
 .btn{
@@ -83,15 +84,16 @@ color: #FFFFFF;
   justify-content: center;
 }
 .signup{
-  font-family: 'poppins';
+  font-family: "poppins";
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 21px;
   text-align: center;
-  /* identical to box height */
   padding: 12px 83px;
-  margin-left: 68px;
+  padding-top: 33px;
+  margin-left: 38px;
+  color: #585562;
   
   color: #585562;
 }
@@ -269,14 +271,14 @@ display: none;
     }
 
   .otp{
-    width: 47%;
+    width: 80%;
     margin: 0 auto;
   }
   .otp-btn{
     width: 45%;
     margin: 0 auto;
     margin-left: 29%;
-    margin-top: 20px;
+    margin-top: 2rem;
   }
   .otp-heading{
     width: 58%;
@@ -376,4 +378,386 @@ display: none;
     // margin: 0 auto;
   
 }
+  }
+
+  @media screen and (max-width:600px) {
+    .loginleftdiv{
+      width: 100%;
+      height: auto;
+  }
+  
+  .ReactModal__Content--after-open{
+  margin: 0 auto;
+  width: 75%;
+  height: 530px;
+  overflow: auto;
+  padding: 0 !important;
+  }
+  .ReactModal__Content{
+    overflow: auto;
+  padding: 0px !important;
+  }
+  .ReactModal__Content--after-open{
+    overflow: auto !important;
+    padding: 0px;
+  }
+  .loginleft-img{
+      width: 100%;
+      height: auto !important;
+  }
+  
+  // .login-container{
+  //     background-color:red;
+  //     display:flex;
+  //     justify-content:flex-start;
+  // }
+  
+  .login-left{
+      background-color: green;
+      width: 100%;
+  }
+  
+  .login-img-div{
+      width: 100%;
+      height: auto !important;
+  }
+  .login-img{
+      width: 100%;
+      height: 100%;
+  }
+  .login-right{
+      background-color: #FFFFFF;;
+      width: 100%;
+  }
+  .phone{
+    width: 100%;
+    margin: 0 auto;
+    height: 50px;
+  }
+  .login-btn{
+    width: 100%;
+    margin: 0 auto;
+    margin-left:4%;
+    margin-top: 20px;
+  }
+  .btn{
+    background-color: #FB7E15 !important;
+  
+  
+  
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+  
+  
+  color: #FFFFFF;
+  }
+  .google-group{
+    width: 100%;
+    margin: 24px auto;
+    margin-left: 0px;
+  }
+  .login{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .signup{
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    padding: 32px 83px;
+    margin-left: 33px;
+    color: #585562;
+  }
+  .PhoneInputInput{
+    height: 45px;
+    font-size: 18px;
+  }
+  /* If you like this, be sure to ❤️ it. */
+  .wrapper {
+      height: 100vh;
+      /* This part is important for centering the content */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      /* End center */
+      background: -webkit-linear-gradient(to right, #834d9b, #d04ed6);
+      background: linear-gradient(to right, #834d9b, #d04ed6);
+    }
+    .login-logodiv{
+      width: 126px;
+      height: 126px;
+        margin: 0 auto;
+    }
+  
+    .login-heading{
+      font-family: 'poppins';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 30px;
+      color: #151C28;
+      text-align: center;
+    }
+    .loginlogo-img{
+        width: 100%;
+        height: auto;
+    }
+    .ab a {
+      display: inline-block;
+      text-decoration: none;
+      padding: 15px;
+      background-color: #fff;
+      border-radius: 3px;
+      text-transform: uppercase;
+      color: #585858;
+      font-family: 'Roboto', sans-serif;
+    }
+    
+    .modal {
+      // visibility: hidden;
+      // opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(77, 77, 77, .7);
+      transition: all .4s;
+    }
+    
+    .modal:target {
+      visibility: visible;
+      opacity: 1;
+    }
+    
+    .modal__content {
+      border-radius: 4px;
+      position: relative;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      max-width: 100%;
+      z-index: 1;
+      background: #fff;
+      padding: 0em 0em;
+    }
+    
+    .modal__footer {
+      text-align: right;
+      a {
+        color: #585858;
+      }
+      i {
+        color: #d02d2c;
+      }
+    }
+    .modal__close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: #585858;
+      text-decoration: none;
+    }
+  /* If you like this, be sure to ❤️ it. */
+  .wrapper {
+    height: 100vh;
+    /* This part is important for centering the content */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* End center */
+    background: -webkit-linear-gradient(to right, #834d9b, #d04ed6);
+    background: linear-gradient(to right, #834d9b, #d04ed6);
+  }
+  
+  // .wrapper a {
+  //   display: inline-block;
+  //   text-decoration: none;
+  //   padding: 15px;
+  //   background-color: #fff;
+  //   border-radius: 3px;
+  //   text-transform: uppercase;
+  //   color: #585858;
+  //   font-family: 'Roboto', sans-serif;
+  // }
+  
+  .modal1 {
+  
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background: rgba(77, 77, 77, .7);
+    transition: all .4s;
+  }
+  
+  .modal1:target {
+    visibility: visible;
+    opacity: 1;
+  
+  }
+  
+  .modal__content1 {
+    border-radius: 4px;
+    position: relative;
+    width: 90%;
+    z-index: 1;
+    max-width: 90%;
+    background: #fff;
+    // padding: 1em 2em;
+  }
+  
+  .modal__footer1 {
+    text-align: right;
+    a {
+      color: #585858;
+    }
+    i {
+      color: #d02d2c;
+    }
+  }
+  .modal__close1 {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #585858;
+    text-decoration: none;
+  }
+  .mobile-login{
+  display: none;
+  }
+  .web-login{
+    display: none;
+    }
+    .web-login{
+      display: block;
+      }
+  
+    .otp{
+      width: 47%;
+      margin: 0 auto;
+    }
+    .otp-btn{
+      width: 45%;
+      margin: 0 auto;
+      margin-left: 29%;
+      margin-top: 20px;
+    }
+    .otp-heading{
+      width: 58%;
+      margin: 0 auto;
+    }
+  
+    .otp-modal {
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(77, 77, 77, .7);
+      transition: all .4s;
+    }
+    
+    .otp-modal:target {
+      visibility: visible;
+      opacity: 1;
+    }
+    
+    .otp-modal__content {
+      border-radius: 4px;
+      position: relative;
+      width: 500px;
+      max-width: 90%;
+      background: #fff;
+      padding: 1em 2em;
+    }
+    
+    .otp-modal__footer {
+      text-align: right;
+      a {
+        color: #585858;
+      }
+      i {
+        color: #d02d2c;
+      }
+    }
+    .otp-modal__close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: #585858;
+      text-decoration: none;
+    }
+    .otp-modal1{
+      display: none;
+    }
+    @media screen and (max-width:600px) {
+     .modal{
+        display: none;
+     }
+     .modal1{
+      display: flex;
+   }
+   .web-login{
+    display: none !important;
+    }
+   .mobile-login{
+    display: flex;
+  }
+  .login-left1{
+    display: block;
+  }
+  .login-right1{
+    display: block;
+  }
+  .signup-mob{
+    font-family: "poppins";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    padding: 12px 12px;
+    /* margin-left: 68px; */
+    color: #585562;
+  }
+  .otp-btn{
+    width: 49%;
+    margin: 0 auto;
+    // margin-left: 32%;
+    margin-top: 20px;
+  }
+  .otp-heading{
+    width: 100%;
+    margin: 0 auto;
+  }
+    .otp1{
+      width: 100%;
+      // margin: 0 auto;
+    
+  }
+    }
+  
   }
