--- a/src/style/landing/header.scss
+++ b/src/style/landing/header.scss
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+.navlinks{
+  color: white !important;
+}
 // li {
 //     padding: 10px 0;
 // }
@@ -50,7 +54,8 @@
 // }
 header{
     
-    color:#222;
+    // color:#222;
+    color:white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -65,7 +70,7 @@ header{
        display: block;
     }
     a {
-      color: #222;
+      color:white;
       opacity: 0.55;
       transition: all 0.6s;
       font-weight: normal;
@@ -129,7 +134,7 @@ header{
           top:25px;
           right:15px;
           cursor: pointer;
-          color:#222;
+          color:white;
           z-index:222;
           font-size: 2rem;
         }
