--- a/src/style/landing/header.scss
+++ b/src/style/landing/header.scss
@@ -54,8 +54,7 @@
 // }
 header{
     
-    // color:#222;
-    color:white;
+    color:#222;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -70,7 +69,7 @@ header{
        display: block;
     }
     a {
-      color:white;
+      color: #222;
       opacity: 0.55;
       transition: all 0.6s;
       font-weight: normal;
