--- a/src/style/landing/header.scss
+++ b/src/style/landing/header.scss
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
-
-.navlinks{
-  color: white !important;
-}
 // li {
 //     padding: 10px 0;
 // }
@@ -133,7 +129,7 @@ header{
           top:25px;
           right:15px;
           cursor: pointer;
-          color:white;
+          color:#222;
           z-index:222;
           font-size: 2rem;
         }
