--- a/src/style/Carwash.scss
+++ b/src/style/Carwash.scss
@@ -34,7 +34,9 @@ line-height: 38px;
 
 color: #151C28;
 }
-
+.para-style-carwash{
+    width: 92%;
+}
 .cardwash-list{
     display: flex;
     // justify-content: space-between;
