--- a/src/style/secondhead.scss
+++ b/src/style/secondhead.scss
@@ -86,7 +86,8 @@ color: #F4F8FF;
 font-family: 'Poppins',sans-serif;
 font-style: normal;
 font-weight: 600;
-font-size: 20px;
+font-size: 25px;
+padding: 0px 9px;
 line-height: 120%;
 /* identical to box height, or 29px */
 
@@ -94,7 +95,13 @@ letter-spacing: 0.01em;
 
 color: #151C28;
 }
-
+.search-input{
+    background: #FFFFFF;
+border: 1px solid rgba(88, 85, 98, 0.27);
+box-sizing: border-box;
+border-radius: 34px;
+padding: 12px 30px;
+}
 @media screen and (max-width:600px){
     .left-heading{
     text-align: center;
