--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1966,7 +1966,21 @@ border-radius: 16px;
   width:70px;
   height:auto;
 }
+.homeslider-main-div{
+  background-color: yellow;
+    padding: 8px 8px;
+    border-top-left-radius:10px;
+    border-bottom-right-radius: 10px;
+    width:257px;
+}
 @media screen and(max-width:600px){
+  .homeslider-main-div{
+    background-color: yellow;
+      padding: 8px 8px;
+      border-top-left-radius:10px;
+      border-bottom-right-radius: 10px;
+      width:193px !important;
+  }
   .footer{
     display:flex;
     justify-content:space-between;
@@ -2075,6 +2089,8 @@ border-radius: 16px;
   }
   
 }
+
+
 @media screen and(max-width:768px){
   .footer{
     display:flex;
@@ -2085,6 +2101,13 @@ border-radius: 16px;
     padding-top:114px;
     flex-wrap:wrap ;
     padding-bottom:25px;
+  }
+  .homeslider-main-div{
+    background-color: yellow;
+      padding: 8px 8px;
+      border-top-left-radius:10px;
+      border-bottom-right-radius: 10px;
+      width:193px;
   }
   .footers{
     display:flex;
