--- a/src/style/tabs.scss
+++ b/src/style/tabs.scss
@@ -2,6 +2,19 @@
     border-bottom: 1px solid rgba(211, 215, 223, 0.6);
 
 }
+.search-containers{
+    width: 287px;
+height: 44px;
+// left: 979px;
+// top: 40px;
+padding:12px 12px ;
+font-size: 20px;
+background: #FFFFFF;
+border: 1px solid rgba(88, 85, 98, 0.27);
+box-sizing: border-box;
+border-radius: 34px;
+outline: none;
+}
 .MuiSvgIcon-fontSizeSmall{
 
     border-radius: 50%;
