--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1545,6 +1545,10 @@ border-radius: 16px;
 
 
 @media screen and(max-width:600px){
+  .email-home{
+    margin-right: 8px;
+    margin-top: 10px;
+  }
   .custmer-card-main{
     display: flex;
     width: 100%;
