--- a/src/style/banner.scss
+++ b/src/style/banner.scss
@@ -1413,10 +1413,10 @@ color: #FFFFFF !important;
 display: flex !important;
 justify-content: space-between !important;
 }
-.css-1k5i4hk-MuiFormControl-root{
-  min-width: 220px !important;
-  width: 220px !important;
-}
+// .css-1k5i4hk-MuiFormControl-root{
+//   min-width: 220px !important;
+//   width: 220px !important;
+// }
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   box-sizing: border-box;
@@ -1563,13 +1563,7 @@ border-radius: 16px;
 //   .main .flexdiv{
 // width: 151px;
 //   }
-.css-1k5i4hk-MuiFormControl-root{
-  min-width: 145px !important;
-  width: 145px !important;
-}
-.css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input{
-  display: flex !important;
-}
+
 .homeName{
   height: 50px;
   width: 145px;
