--- a/src/style/secondhead.scss
+++ b/src/style/secondhead.scss
@@ -7,6 +7,12 @@
     background: linear-gradient(90.27deg, #151C28 0.05%, #1C2536 110.35%);
 }
 
+// .nameoffering{
+//     margin-top: 20px !important;
+// }
+.button-offer{
+    margin-top: 20px !important;
+}
 .second-headstar{
     width:70%;
     margin:0 auto;
@@ -14,7 +20,26 @@
      display:flex;
      padding:5px;
 }
-
+.homeNames{
+    height: 50px;
+    width: 220px;
+    outline: none;
+    font-size: 15px;
+    font-family: 'Poppins';
+    padding: 5px 5px;
+    background: #FFFFFF;
+  border: 1px solid rgba(88, 85, 98, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 20px;
+  }
+  .email-home{
+    margin-right: 8px;
+  }
+  .homeNames::placeholder{
+    padding: 5px 12px;
+    font-size: 16px;
+  }
 .secondhead-img-div{
     width:33px;
     height:auto;
@@ -95,6 +120,9 @@ letter-spacing: 0.01em;
 
 color: #151C28;
 }
+// .dropdowns{
+//     padding-left: 33px !important;
+//   }
 .search-input{
     background: #FFFFFF;
 border: 1px solid rgba(88, 85, 98, 0.27);
@@ -103,6 +131,24 @@ border-radius: 34px;
 padding: 12px 30px;
 }
 @media screen and (max-width:600px){
+    .nameoffering{
+        margin-left: 16px;
+    }
+    .dropdowns{
+        padding-left: 0px !important;
+      }
+    .homeNames{
+       width: 145px;
+        outline: none;
+        font-size: 8px;
+        font-family: 'Poppins';
+        padding: 5px 5px;
+        background: #FFFFFF;
+      border: 1px solid rgba(88, 85, 98, 0.2);
+      box-sizing: border-box;
+      border-radius: 4px;
+      margin-top: 0px;
+      }
     .left-heading{
     text-align: center;
     }
